--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
+    "@hookform/devtools": "^4.3.1",
     "typescript": "4.1.3"
   },
   "scripts": {
