--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "file-saver": "^2.0.5",
     "loader-utils": "3.2.1",
+    "nedb": "^1.8.0",
+    "path-browserify": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.45.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "^2.1.3",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
@@ -27,5 +31,16 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ],
+    "rules": {
+      "react/jsx-uses-react": "off",
+      "react/react-in-jsx-scope": "off"
+    }
+}
 }
